【提交类型】：添加功能 【相关缺陷】： 【详细描述】：引入图标 【影响范围】：不影响 【备　　注】：

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/static/js/app.js": "/static/js/app.js",
-    "/static/css/app.css": "/static/css/app.css"
+    "/static/js/app.js": "/static/js/app.js?id=c8800ed9217ab9136110",
+    "/static/css/app.css": "/static/css/app.css?id=956681e19ae3a25f2638"
 }
