--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:VsP+uViTycNKm2ZmfPsEHLvsqMq2eM6taaUZhzCgXDs=
+APP_KEY=base64:jwBsnO0RWKdbRRjJOB6dR/e1RMBseh8XF0z4dHg0wnU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,8 +8,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-DB_HOST=mysql
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=yxx_reconciliation_tool
 DB_USERNAME=root
