--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Yxxtool
 APP_ENV=local
 APP_KEY=base64:jwBsnO0RWKdbRRjJOB6dR/e1RMBseh8XF0z4dHg0wnU=
 APP_DEBUG=true
@@ -13,6 +13,7 @@ DB_PORT=3306
 DB_DATABASE=yxx_reconciliation_tool
 DB_USERNAME=root
 DB_PASSWORD=
+DB_PREFIX=yxx_
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
