--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:jwBsnO0RWKdbRRjJOB6dR/e1RMBseh8XF0z4dHg0wnU=
 APP_DEBUG=true
 APP_URL=http://localhost
+CAPTCHA_DISABLE=true
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
