【提交类型】：添加功能 【相关缺陷】： 【详细描述】：样式调整 【影响范围】：不影响 【备　　注】：

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=Yxxtool
 APP_ENV=local
 APP_KEY=base64:jwBsnO0RWKdbRRjJOB6dR/e1RMBseh8XF0z4dHg0wnU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://local.yxxtool.test
 CAPTCHA_DISABLE=true
 
 LOG_CHANNEL=stack
