增加网址版本区分

--- a/doc/安装文档/1-appache-conf/httpd-vhosts-yxx.conf
+++ b/doc/安装文档/1-appache-conf/httpd-vhosts-yxx.conf
@@ -1,10 +1,31 @@
-########################## yxx-account 对账系统 ############################
+########################## yxx-accountv1 对账系统 ############################
 <VirtualHost *:80>
-    DocumentRoot "D:\work\work_xiangwei\yxx\src\yxx-account\public"
-    ServerName account.yxx.test
-    ErrorLog "logs/account.yxx.test-error.log"
-    CustomLog "logs/account.yxx.test-access.log" combined
-    <Directory "D:\work\work_xiangwei\yxx\src\yxx-account\public">
+    DocumentRoot "D:\work\work_xiangwei\yxx\src\yxx-accountv1\public"
+    ServerName accountv1.yxx.test
+    ErrorLog "logs/accountv1.yxx.test-error.log"
+    CustomLog "logs/accountv1.yxx.test-access.log" combined
+    <Directory "D:\work\work_xiangwei\yxx\src\yxx-accountv1\public">
+        Options Indexes FollowSymLinks Includes ExecCGI
+        AllowOverride All
+        Order allow,deny
+        Allow from all
+        #Header set Access-Control-Allow-Origin *
+        RewriteEngine On
+        RewriteCond %{REQUEST_FILENAME} -s [OR]
+        RewriteCond %{REQUEST_FILENAME} -l [OR]
+        RewriteCond %{REQUEST_FILENAME} -d
+        RewriteRule ^.*$ - [NC,L]
+        RewriteRule ^.*$ index.php [NC,L]
+    </Directory>
+</VirtualHost>
+
+########################## yxx-accountv2 对账系统 ############################
+<VirtualHost *:80>
+    DocumentRoot "D:\work\work_xiangwei\yxx\src\yxx-accountv2\public"
+    ServerName accountv2.yxx.test
+    ErrorLog "logs/accountv2.yxx.test-error.log"
+    CustomLog "logs/accountv2.yxx.test-access.log" combined
+    <Directory "D:\work\work_xiangwei\yxx\src\yxx-accountv2\public">
         Options Indexes FollowSymLinks Includes ExecCGI
         AllowOverride All
         Order allow,deny
